--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+
+*.dll
+
 `# .NET Core / Visual Studio
 ## Build results
 [Dd]ebug/
@@ -10,6 +13,7 @@ bld/
 [Bb]in/
 [Oo]bj/
 [Oo]ut/
+
 
 
 ## Visual Studio temporary files
